# atarist-sidecart-raspberry-pico

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  build.sh  ffconf.h.bak  update_version.py  update_version_beta.py  version-beta.txt  version.txt
.github/workflows/: build.yml  nightly.yml  release-beta.yml  release.yml
docs/: signals.md
romemul/: CMakeLists.txt  bin2array.py  commands.c  config.c  constants.c  cubaseemul.c  dongleemul.c  download_firmware.py  download_floppyemul.py  download_gemdrvemul.py  download_rtcemul.py  ffconf.h  filesys.c  firmware.c  firmware_floppyemul.c  firmware_gemdrvemul.c  firmware_rtcemul.c  floppyemul.c  gemdrvemul.c  httpd.c  hw_config.c  imgformats.c  lwipopts.h  main.c  memmap_romemul.ld  network.c  romemul.c  romemul.pio  romloader.c  rtcemul.c  tprotocol.c  tusb_config.h  usb_descriptors.c  usb_mass.c
romemul/cJSON/: cJSON.c
romemul/fs/: README.md  floppies.shtml  floppies_catalog_a.shtml  floppies_catalog_b.shtml  floppies_eject.shtml  floppies_select.shtml  index.html  output.css  tailwind.config.js
romemul/include/: commands.h  config.h  constants.h  cubaseemul.h  debug.h  dongleemul.h  filesys.h  firmware.h  firmware_floppyemul.h  firmware_gemdrvemul.h  firmware_rtcemul.h  floppyemul.h  gemdrvemul.h  httpd.h  imgformats.h  memfunc.h  network.h  romemul.h  romloader.h  rtcemul.h  tprotocol.h  usb_mass.h
roms/: create_roms_csv  create_roms_markdown  roms.json  update_json  upload_roms
schematics/: README.md
schematics/v0.0.1/: SCH_Atari ST sidecart prototype shared bus_2023-09-15.json
